force-app/main/default/objects/sked_Drive_Shift__c/sked_Drive_Shift__c.object-meta.xml
<CustomObject>
    <label>Drive Shift</label>
    <nameField>
        <label>Drive Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drive Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>