force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Contention__c.field-meta.xml
<CustomField>
    <fullName>sked_Contention__c</fullName>
    <description>Capture drive shift contentions</description>
    <label>Contention</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Time Block</fullName>
            </value>
            <value>
                <fullName>Out Of Time Block</fullName>
            </value>
            <value>
                <fullName>Fits Multiple Time Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>