force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Contention_Resolution__c.field-meta.xml
<CustomField>
    <fullName>sked_Contention_Resolution__c</fullName>
    <description>Contention resolutions</description>
    <label>Contention Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elect to acknowledge the drive shift without Time Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>