force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Default_Platelet_Slots__c.field-meta.xml
<CustomField>
    <fullName>sked_Default_Platelet_Slots__c</fullName>
    <label>Default Platelet Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>