force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Donors_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>sked_Donors_Scheduled__c</fullName>
    <label>Donors Scheduled</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>