force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive__c</fullName>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Drive Shifts</relationshipLabel>
    <relationshipName>sked_Drive_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>