force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Drive_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Operation_Type__c</fullName>
    <formula>sked_Drive__r.sked_Operation_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Operation Type</label>
    <type>Text</type>
</CustomField>