force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Drive_Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_Name__c</fullName>
    <formula>sked_Drive__r.sked_Account__r.Name
+ &quot; - &quot; + TEXT(MONTH(sked_Drive__r.sked_Drive_Date__c))+&quot;/&quot; +TEXT(DAY(sked_Drive__r.sked_Drive_Date__c))+&quot;/&quot; +TEXT(YEAR(sked_Drive__r.sked_Drive_Date__c))
+ &quot; - &quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Shift Name</label>
    <type>Text</type>
</CustomField>