force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Equipment_Allocated__c.field-meta.xml
<CustomField>
    <fullName>sked_Equipment_Allocated__c</fullName>
    <label>Equipment Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>