force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Finish__c.field-meta.xml
<CustomField>
    <fullName>sked_Finish__c</fullName>
    <label>Max Shift End</label>
    <type>DateTime</type>
</CustomField>