force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_has_TimeBlock_Violation__c.field-meta.xml
<CustomField>
    <fullName>sked_has_TimeBlock_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this driveshift has any timeblock violation</description>
    <label>Has TimeBlock Violation</label>
    <type>Checkbox</type>
</CustomField>