force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Is_Time_Block_Missing__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Time_Block_Missing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>HRP-15704 A new field is created to see if a drive shift is missing a time block.</description>
    <label>Is Time Block Missing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>