force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Lunch_Break__c.field-meta.xml
<CustomField>
    <fullName>sked_Lunch_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunch Break?</label>
    <type>Checkbox</type>
</CustomField>