force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Lunch_Break_Before_Draw_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Lunch_Break_Before_Draw_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunch Break Before Draw Hours?</label>
    <type>Checkbox</type>
</CustomField>