force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Lunch_Break_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Lunch_Break_End_Time__c</fullName>
    <label>Lunch Break End Time</label>
    <type>Time</type>
</CustomField>