force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Max_Shift_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Shift_End_Date__c</fullName>
    <label>Max Shift End Date</label>
    <type>Date</type>
</CustomField>