force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Min_Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Min_Shift_Start_Time__c</fullName>
    <label>Min Shift Start Time</label>
    <type>Time</type>
</CustomField>