force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Order__c.field-meta.xml
<CustomField>
    <fullName>sked_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>