force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Platelet_Rounds__c.field-meta.xml
<CustomField>
    <fullName>sked_Platelet_Rounds__c</fullName>
    <label>Platelet Rounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>