force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Shadow_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Shadow_Drive_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shadow Drive Shift</label>
    <referenceTo>sked_Shadow_Drive_Shift__c</referenceTo>
    <relationshipLabel>Drive Shifts</relationshipLabel>
    <relationshipName>sked_Drive_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>