force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Sign_Up_Reduction__c.field-meta.xml
<CustomField>
    <fullName>sked_Sign_Up_Reduction__c</fullName>
    <label>Sign-Up Reduction %</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>