force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Staff_Setup__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Setup__c</fullName>
    <label>Staff Setup</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>