force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Start__c</fullName>
    <label>Min Shift Start</label>
    <type>DateTime</type>
</CustomField>