force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time__c</fullName>
    <label>Draw Start Time</label>
    <type>Time</type>
</CustomField>