force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Block</label>
    <referenceTo>Time_Block__c</referenceTo>
    <relationshipLabel>Drive Shifts</relationshipLabel>
    <relationshipName>sked_Drive_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>