force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_TimeBlock_Violation_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_TimeBlock_Violation_Message__c</fullName>
    <description>Indicates error message associated with timeblock violation</description>
    <label>TimeBlock Violation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>