force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Total_Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Break_Minutes__c</fullName>
    <formula>VALUE(TEXT(sked_Drive__r.sked_Maximum_Lunch_Break_Duration__c)) * sked_Staff_Setup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Break Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>