force-app/main/default/objects/sked_Drive_Shift__c/fields/sked_Total_Products_Projected__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Products_Projected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Products Projected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>