force-app/main/default/objects/sked_Drive_Shift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Drive__c</columns>
    <columns>sked_Drive_Date__c</columns>
    <columns>sked_Drive_Site__c</columns>
    <columns>sked_Vehicles_Needed__c</columns>
    <columns>sked_Vehicles_Allocated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>